# py-yaml12

./: .gitignore  404.html  AGENTS.md  Cargo.toml  Makefile  README.md  _quarto.yml  benchmarks.qmd  build.rs  great-docs.yml  index.html  mkdocs.yml  pyproject.toml  yaml12.pyi
.github/workflows/: CI.yml  docs.yml  pypy.yml  rust-lints.yml
api/: index.html
authors/: index.html
contributing/: index.html
docs/: .gitignore  _environment  _quarto.yml  api.md  authors.md  contributing.md  extra.css  index.md  tags.md  usage.md
docs/benchmarks/: index.md
docs/reference/: format_yaml.md  index.md  parse_yaml.md
reference/: index.html
reference/format_yaml/: index.html
reference/parse_yaml/: index.html
search/: search_index.json
src/: lib.rs
tags/: index.html
tests/: basic.rs
tests_py/: test_docs_snippets.py  test_format_parse.py  test_mapping_keys.py  test_read_write.py  test_suite.py  test_tag_handlers.py  test_typechecks.py  test_yaml_class.py
usage/: index.html
user_guide/: 01-yaml-in-2-minutes.qmd  02-tags-anchors-and-advanced-yaml.qmd  10-reference.qmd  90-authors-and-citation.qmd  91-contributing.qmd  index.qmd
