[package]
name = "yaml12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "yaml12"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.2"
saphyr = { git = "https://github.com/t-kalinowski/saphyr", branch = "r-patched" }
saphyr-parser = { git = "https://github.com/t-kalinowski/saphyr", branch = "r-patched" }

[features]
default = ["abi3"]
abi3 = ["pyo3/abi3-py310"]
