[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "yaml12"
requires-python = ">=3.10"
authors = [{ name = "Tomasz Kalinowski" }]
maintainers = [{ name = "Tomasz Kalinowski" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py310"]
